# zephyr-motion-control

./: .gitignore  CMakeLists.txt  Kconfig  README.rst  flake.nix  west.yml
.github/workflows/: ci.yaml
drivers/: CMakeLists.txt  Kconfig
drivers/motor_actuator/: CMakeLists.txt  Kconfig  Kconfig.esp32s3  Kconfig.stm32  motor_actuator_common.h  motor_stage_hbridge_esp32s3.c  motor_stage_hbridge_stm32.c
drivers/motor_sensor/: CMakeLists.txt  Kconfig  Kconfig.esp32s3  Kconfig.stm32  motor_sensor_encoder_esp32s3.c  motor_sensor_encoder_stm32.c
include/zephyr/: motor.h  motor_actuator.h  motor_controller.h  motor_sensor.h  motor_subsys.h  motor_types.h
nix/: formatter.nix
nix/devshells/: default.nix
samples/dc_current/: CMakeLists.txt  README.rst  prj_stm32_ll.conf  sample.yaml
samples/dc_current_full_bridge/: CMakeLists.txt  README.rst  prj_stm32_ll.conf  sample.yaml
samples/dc_torque/: CMakeLists.txt  README.rst  prj_stm32_ll.conf
samples/dc_torque_full_bridge/: CMakeLists.txt  README.rst  prj_stm32_ll.conf
samples/foo/: examples.overlay
samples/motor_shell/: CMakeLists.txt  README.rst  (+2 more)
scripts/: run-tests  setup-direnv  setup-udev
subsys/: CMakeLists.txt  Kconfig  motor.c  motor_algo_dc_current.c  motor_algo_dc_torque.c  motor_ctrl.c  motor_pipeline.c  motor_shell.c  motor_subsys.c
tests/: run_twister.sh
tests/motor/algo_dc_torque/: CMakeLists.txt  prj.conf  testcase.yaml
tests/motor/algo_dc_torque/src/: main.c
tests/motor/motor_subsys/: CMakeLists.txt  prj.conf  testcase.yaml
tests/motor/motor_subsys/src/: main.c
zephyr/: module.yml
(+57 files in other folders)
